undo lots of styling and removed video to try an debud the spacing issue when screen size reduces

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,46 +5,16 @@
     --light-dark: #93BFCF;
     --dark: #6096B4;
     --border-radius: 10px;
+    --shadow:
 }
 
 * {
     box-sizing: border-box;
 }
 
-header {
-    background-color: var(--dark);
-    color: var(--primary);
-    padding: 1.5% 4%;
-    height: 40%;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-}
-
-video::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(--dark(0, 0, 0, 0.5), --light-dark(0, 0, 0, 0.5));
-    z-index: 2;
-}
-
-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 
 body {
-    background: linear-gradient(to bottom, white 50%, rgba(255, 255, 255, 0)),
+    background: linear-gradient(to bottom, white 30%, rgba(255, 255, 255, 0)),
         url("..//images/sand-water-the-ocean-the-bottom-wallpaper-preview.jpg");
     background-size: cover;
     margin: 0;
